--- a/deployment/production/REQUIREMENTS.txt
+++ b/deployment/production/REQUIREMENTS.txt
@@ -58,3 +58,4 @@ djangorestframework-gis==0.13
 pandas==0.23.4
 git+https://github.com/dimasciput/pandas_access.git
 selenium==3.12.0
+matplotlib==2.2.4
