--- a/deployment/docker/Dockerfile-travis
+++ b/deployment/docker/Dockerfile-travis
@@ -1,12 +1,18 @@
 #--------- Generic stuff all our Dockerfiles should start with so we get caching ------------
-# Note this base image is based on debian
-FROM kartoza/kbims_uwsgi:latest
+FROM geosolutionsit/geonode-generic:1.0
 MAINTAINER Dimas Ciputra<dimas@kartoza.com>
 
+RUN apt-get update -y && apt-get -y --force-yes install yui-compressor rpl mdbtools
+
+ADD REQUIREMENTS.txt /REQUIREMENTS.txt
+RUN pip install -r /REQUIREMENTS.txt
+RUN pip install uwsgi
+
 #USER www-data
-WORKDIR /usr/src/bims
+WORKDIR /home/web/django_project
 
 ADD uwsgi.conf /uwsgi.conf
+
 # Open port 8080 as we will be running our uwsgi socket on that
 EXPOSE 8080
 
