--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -12,6 +12,6 @@ jobs:
     runs-on: ubuntu-18.04
  
     steps:
-    - uses: dimasciput/django-bims@v0.1
+    - uses: actions/checkout@v1
     - name: Build the Docker image
       run: docker build . --file deployment/production/Dockerfile --tag dimasciput/kartoza-django-bims:latest
