--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -13,6 +13,7 @@ jobs:
  
     steps:
     - uses: actions/docker/login@master
+    - secrets: ["DOCKER_USERNAME", "DOCKER_PASSWORD"]
     - name: Login to Docker hub
       env:
           DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
