--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -12,10 +12,9 @@ jobs:
     runs-on: ubuntu-16.04
  
     steps:
-    - uses: actions/docker/login@master
-    - secrets: ["DOCKER_USERNAME", "DOCKER_PASSWORD"]
+    - uses: actions/checkout@v1
     - name: Login to Docker hub
       env:
           DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
           DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
-      run: docker login
+      run: docker login -p ${{ secrets.DOCKER_PASSWORD }} -u ${{ secrets.DOCKER_USERNAME }}
