--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -8,11 +8,22 @@ on:
 jobs:
 
   build:
- 
     runs-on: ubuntu-16.04
- 
     steps:
-    - uses: actions/docker/login@master
+    - name: Login to Docker Hub
+      uses: actions/docker/login@master
       env:
         DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
         DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
+  
+  update-rancher:
+    needs: build
+    runs-on: ubuntu-16.04
+    steps:
+    - name : Update rancher
+      run: |
+        cd /
+        git clone --depth 1 https://github.com/lucernae/rancher-api-helper.git
+        cd rancher-api-helper
+        pip install -r requirements.txt
+  
