--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -23,8 +23,16 @@ jobs:
     runs-on: ubuntu-16.04
     steps:
     - name : Update rancher
+      env:
+        RANCHER_SECRET_KEY: ${{ secrets.RANCHER_SECRET_KEY }}
+        RANCHER_PROJECT_ID: ${{ secrets.RANCHER_PROJECT_ID }}
+        RANCHER_BASE_URL: ${{ secrets.RANCHER_BASE_URL }}
+        RANCHER_ACCESS_KEY: ${{ secrets.RANCHER_ACCESS_KEY }}
+        RANCHER_TARGET_STACK_ID: ${{ secrets.RANCHER_TARGET_STACK_TESTING_ID }}
       run: |
         git clone --depth 1 https://github.com/lucernae/rancher-api-helper.git
         cd rancher-api-helper
         pip install -r requirements.txt
-  
+        export RANCHER_TARGET_STACK_ID=${{ secrets.RANCHER_TARGET_STACK_TESTING_ID }}
+        export RANCHER_TARGET_SERVICE_ID=${{ secrets.RANCHER_TARGET_SERVICE_WEB_ID }}
+        scripts/auto_upgrade_service.py
