--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -33,6 +33,7 @@ jobs:
         git clone --depth 1 https://github.com/lucernae/rancher-api-helper.git
         cd rancher-api-helper
         pip install -r requirements.txt
+        export PYTHONPATH="${PWD}"
         export RANCHER_TARGET_STACK_ID=${{ secrets.RANCHER_TARGET_STACK_TESTING_ID }}
         export RANCHER_TARGET_SERVICE_ID=${{ secrets.RANCHER_TARGET_SERVICE_WEB_ID }}
         scripts/auto_upgrade_service.py
