--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -12,36 +12,10 @@ jobs:
     runs-on: ubuntu-16.04
     steps:
     - uses: actions/checkout@v1
-    - name: Login
-      uses: actions/docker/login@master
-      env: 
-        DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
-        DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
     - name: Build the Docker image
       uses: actions/docker/cli@master
+      with:
+        args: build deployment/production/ --build-arg BIMS_TAG=develop --tag dimasciput/kartoza-django-bims:latest
       env:
         args: build deployment/production/ --build-arg BIMS_TAG=develop --tag dimasciput/kartoza-django-bims:latest
       # run: docker build deployment/production/ --build-arg BIMS_TAG=develop --tag dimasciput/kartoza-django-bims:latest
-    - name: Push the Docker Image
-      run: docker push dimasciput/kartoza-django-bims:latest
-  
-  update-rancher:
-    name: Update Rancher Stacks
-    needs: build
-    runs-on: ubuntu-16.04
-    steps:
-    - name : Update rancher
-      env:
-        RANCHER_SECRET_KEY: ${{ secrets.RANCHER_SECRET_KEY }}
-        RANCHER_PROJECT_ID: ${{ secrets.RANCHER_PROJECT_ID }}
-        RANCHER_BASE_URL: ${{ secrets.RANCHER_BASE_URL }}
-        RANCHER_ACCESS_KEY: ${{ secrets.RANCHER_ACCESS_KEY }}
-        RANCHER_TARGET_STACK_ID: ${{ secrets.RANCHER_TARGET_STACK_TESTING_ID }}
-      run: |
-        git clone --depth 1 https://github.com/lucernae/rancher-api-helper.git
-        cd rancher-api-helper
-        pip install -r requirements.txt
-        export PYTHONPATH="${PWD}"
-        export RANCHER_TARGET_STACK_ID=${{ secrets.RANCHER_TARGET_STACK_TESTING_ID }}
-        export RANCHER_TARGET_SERVICE_ID=${{ secrets.RANCHER_TARGET_SERVICE_WEB_ID }}
-        scripts/auto_upgrade_service.py
