--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -17,7 +17,11 @@ jobs:
         ref: testing.healthyrivers.kartoza.com
     - uses: actions/setup-node@v1
     - name: npm install, run script
+      env:
+        rancherAccessKey: ${{ RANCHER_SECRET_KEY }}
+        rancherSecretKey: ${{ RANCHER_ACCESS_KEY }}
       run: |
+        cd kartoza-rancher-scripts
         npm install
         node rancher_scripts.js
   
