--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -11,7 +11,37 @@ jobs:
     name: Build and Push Docker Image
     runs-on: ubuntu-16.04
     steps:
-      - uses: kartoza/kbims-healthyrivers/.github/workflows@develop
-        env:
-          secrets: ${{ secrets }}
-      
+    - uses: actions/checkout@v1
+    - name: Login to Docker Hub
+      uses: actions/docker/login@master
+      env: 
+        DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
+        DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
+    - name: Build the Docker image
+      uses: actions/docker/cli@master
+      with:
+        args: build deployment/production/ --build-arg BIMS_TAG=develop --tag dimasciput/kartoza-django-bims:latest
+    - name: Push the Docker Image
+      uses: actions/docker/cli@master
+      with:
+        args: push dimasciput/kartoza-django-bims:latest
+        
+  
+  update-rancher:
+    name: Update Rancher Stacks
+    needs: build
+    runs-on: ubuntu-16.04
+    steps:
+    - uses: actions/checkout@v1
+      with:
+        repository: dimasciput/kartoza-rancher-scripts
+        ref: testing.healthyrivers.kartoza.com
+    - uses: actions/setup-node@v1
+    - name: npm install, run node script
+      env:
+        rancherAccessKey: ${{ secrets.RANCHER_ACCESS_KEY }}
+        rancherSecretKey: ${{ secrets.RANCHER_SECRET_KEY }}
+      run: |
+        cd ../kartoza-rancher-scripts
+        npm install
+        node rancher_scripts.js
