--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -20,28 +20,9 @@ jobs:
     - name: Build the Docker image
       uses: actions/docker/cli@master
       with:
-        args: build deployment/production/ --build-arg BIMS_TAG=develop --tag dimasciput/kartoza-django-bims:latest
-    - name: Push the Docker Image
-      uses: actions/docker/cli@master
-      with:
-        args: push dimasciput/kartoza-django-bims:latest
+        args: build deployment/production/ --build-arg BIMS_TAG=develop --tag kartoza/kbims_uwsgi:latest
+    - name: Run docker compose
+      working-directory: deployment/
+      run: docker-compose run travis
         
   
-  update-rancher:
-    name: Update Rancher Stacks
-    needs: build
-    runs-on: ubuntu-16.04
-    steps:
-    - uses: actions/checkout@v1
-      with:
-        repository: dimasciput/kartoza-rancher-scripts
-        ref: testing.healthyrivers.kartoza.com
-    - uses: actions/setup-node@v1
-    - name: npm install, run node script
-      env:
-        rancherAccessKey: ${{ secrets.RANCHER_ACCESS_KEY }}
-        rancherSecretKey: ${{ secrets.RANCHER_SECRET_KEY }}
-      run: |
-        cd ../kartoza-rancher-scripts
-        npm install
-        node rancher_scripts.js
