--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -6,23 +6,21 @@ on:
       - develop
 
 jobs:
-
-  build:
-    name: Build and Push Docker Image
+        
+  update-rancher:
+    name: Update Rancher Stacks
+    needs: build
     runs-on: ubuntu-16.04
     steps:
     - uses: actions/checkout@v1
-    - name: Login to Docker Hub
-      uses: actions/docker/login@master
-      env: 
-        DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
-        DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
-    - name: Build the Docker image
-      uses: actions/docker/cli@master
       with:
-        args: pull kartoza/kbims_uwsgi:latest
-    - name: Run docker compose
-      working-directory: deployment/
-      run: docker-compose run travis
-        
-  
+        repository: dimasciput/kartoza-rancher-scripts
+        ref: testing.healthyrivers.kartoza.com
+    - uses: actions/setup-node@v1
+    - name: npm install, run node script
+      env:
+        rancherAccessKey: ${{ secrets.RANCHER_ACCESS_KEY }}
+        rancherSecretKey: ${{ secrets.RANCHER_SECRET_KEY }}
+      working-directory: ../kartoza-rancher-scripts
+      run: |
+        npm install
