--- a/deployment/docker/REQUIREMENTS.txt
+++ b/deployment/docker/REQUIREMENTS.txt
@@ -5,7 +5,7 @@ django-model-utils==1.4.0
 django-pipeline==1.6.14
 django-role-permissions==2.2.0
 markdown==2.6.11
-celery==4.1.0
+celery==4.2.1
 
 raven==6.10.0
 django-sentry==1.13.5
@@ -13,7 +13,7 @@ requests>=2.20.0
 pytz
 # support special characters
 
-django-allauth==0.35.0
+django-allauth==0.39.1
 
 # Django Easy Audit
 # https://github.com/soynatan/django-easy-audit
@@ -40,7 +40,7 @@ django-modelsdoc==0.1.9
 
 # contacts page
 django-contact-us==0.4.1
-Pillow==5.1.0
+Pillow==6.1.0
 django-ordered-model==1.4.3
 
 # Statistics Dashboard
@@ -61,3 +61,5 @@ selenium==3.12.0
 matplotlib==2.2.4
 django-admin-rangefilter==0.4.0
 django-preferences==1.0.0
+django-extensions==2.2.1
+service-identity==18.1.0
